# gpgpu-arena

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/arena/: benchmark.hpp  context.hpp  kernel_compiler.hpp  kernel_descriptor.hpp  kernel_loader.hpp  logger.hpp  profiler.hpp  runner.hpp  utils.hpp
include/arena/compilers/: compiler.hpp  compiler_utils.hpp  cuda_compiler.hpp  cutile_compiler.hpp  kernel_compiler.hpp  triton_compiler.hpp  warp_compiler.hpp
include/arena/kernels/: matmul_base.hpp  reduce_base.hpp  scan_base.hpp  softmax_base.hpp
include/frontend/: cli.hpp  gui.hpp  tui.hpp
kernels/: cutile_base.py  matmul_naive.cu  matmul_tiled.cu  triton_base.py  warp_base.py
kernels/matmul/: matmul.cutile.cpp  matmul.cutile.py  matmul.triton.cpp  matmul.triton.py  naive.cpp  naive.cu
kernels/reduce/: baseline.cpp  baseline.cu  block_atomic.cpp  block_atomic.cu  cub_reduce.cu  grid_stride.cpp  grid_stride.cu  reduce.cutile.cpp  reduce.cutile.py  reduce.triton.cpp  reduce.triton.py  reduce.warp.cpp  reduce.warp.py  reduce_grid_stride.triton.cpp  reduce_grid_stride.triton.py  two_stage.cpp  two_stage.cu  vectorized.cpp  vectorized.cu  warp_shmem.cpp  warp_shmem.cu  warp_shuffle.cpp  warp_shuffle.cu
kernels/scan/: cub_scan.cu  naive.cpp  naive.cu
kernels/softmax/: naive.cpp  naive.cu
src/: main.cpp
src/arena/: benchmark.cpp  context.cpp  kernel_compiler.cpp  kernel_loader.cpp  profiler.cpp  runner.cpp
src/arena/compilers/: compiler_utils.cpp  cuda_compiler.cpp  cutile_compiler.cpp  kernel_compiler.cpp  triton_compiler.cpp  warp_compiler.cpp
src/frontend/: cli.cpp  gui.cpp  tui.cpp
